Gituhub Projekte eingefügt & HintergrundBild

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="jumbotron text-center" style="margin-bottom:0;">
     <h1>Meine erste Website</h1>
     <p>...oder zumindest der Versuch</p> 
+    <img class="backround" src="src/Bilder/P1000789.jpeg">
 </div>
 
 <div class="container" style="margin-top:30px">
@@ -41,20 +42,23 @@
             </section>
         </div>
         <div class="col-sm-8">
+            <h1>Meine Projekte</h1>
             <article>
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Dec 7, 2017</h5>
-                    <div class="IMG">Fake Image</div>
-                    <p>Some text..</p>
-                    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                </article>
-                <article>
-                    <h2>TITLE HEADING</h2>
-                    <h5>Title description, Dec 7, 2017</h5>
-                    <div class="IMG">Fake Image</div>
-                    <p>Some text..</p>
-                    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                </article>
+                <div class="github-card" data-github="Darker97/nitro#" data-width="400" data-height="150" data-theme="default"></div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>              
+            </article>
+            <article>
+                <div class="github-card" data-github="chaoswithleds/smaht-Stirnband" data-width="400" data-height="" data-theme="default"></div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>             
+            </article>
+            <article>
+                <div class="github-card" data-github="Darker97/Buchhaltung-in-der-Blockchain" data-width="400" data-height="" data-theme="default"></div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>               
+            </article>
+            <article>
+                <div class="github-card" data-github="Darker97/skynetForCatsAndDogs" data-width="400" data-height="" data-theme="default"></div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>               
+            </article>
         </div>
     </div>
 </div>
