--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="src/css/home.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -27,16 +28,16 @@
                 <p>Wo kann man mich finden?</p>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                    <a class="nav-link active" href="https://github.com/Darker97">Github</a>
+                        <a href="https://github.com/Darker97" class="nav-link active">🖥 Github</a> 
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Blog 📓</a>
+                        <a href="https://www.linkedin.com/in/christian-baltzer-7bbb84174" class="nav-link">📩 Linkedin</a> 
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="src/html/videos.html">Videos</a>
+                        <a class="nav-link" href="#">📓 Blog</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="src/html/projekte.html">Projekte</a>
+                        <a class="nav-link" href="src/html/videos.html">📺 Videos</a>
                     </li>
                 </ul>
             </section>
