--- a/src/html/videos.html
+++ b/src/html/videos.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-sm-4">
             <section>
-                <a href="/index.html" class="nav-link active">🔙 Zurück</a> 
+                <a href="https://darker97.github.io/MeineErsteWebsite/" class="nav-link active">🔙 Zurück</a> 
             </section>
         </div>
         <div class="col-sm-8">
